--- a/woorischool/Cells/VIews/MyChattingTableViewCell.xib
+++ b/woorischool/Cells/VIews/MyChattingTableViewCell.xib
@@ -16,104 +16,96 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="313" id="KGk-i7-Jjw" customClass="MyChattingTableViewCell" customModule="우리스쿨" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="313"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="260" id="KGk-i7-Jjw" customClass="MyChattingTableViewCell" customModule="우리스쿨" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="260"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="313"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="260"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ih-AA-bRH">
-                        <rect key="frame" x="35" y="264" width="11.5" height="12"/>
-                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                        <color key="textColor" name="greenishTeal"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="peA-gL-2bJ">
-                        <rect key="frame" x="22" y="281" width="24.5" height="12"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="peA-gL-2bJ">
+                        <rect key="frame" x="40" y="228" width="21.5" height="12"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
                         <color key="textColor" name="brownGrey"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" horizontalHuggingPriority="240" horizontalCompressionResistancePriority="740" translatesAutoresizingMaskIntoConstraints="NO" id="up0-D3-klp" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                        <rect key="frame" x="56.5" y="0.0" width="243.5" height="293"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempImage" translatesAutoresizingMaskIntoConstraints="NO" id="Pkr-Af-sZ3">
+                        <rect key="frame" x="200" y="0.0" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="be8-jz-UkD"/>
+                            <constraint firstAttribute="height" constant="100" id="mdF-yK-Ocg"/>
+                        </constraints>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bBe-F8-S1e">
+                        <rect key="frame" x="71.5" y="120" width="228.5" height="120"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="240" horizontalCompressionResistancePriority="740" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="o7s-Vt-3Gf">
-                                <rect key="frame" x="15" y="15" width="213.5" height="263"/>
+                            <view contentMode="scaleToFill" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="up0-D3-klp" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="228.5" height="120"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" text="ndfngvljdfngfjksandfkjasdnfkjnsadjkfnadskjfnasdjkfnsadjklfnkjasdnfkjsadnfjklasdnfjklasdnfkjl" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6o-qQ-j5r">
-                                        <rect key="frame" x="0.0" y="0.0" width="213.5" height="93"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" text="ㅇㅁㅇㅁㄴㅇㅁㄴㅇㅁㄴㅇㅁㄴㅇㅁㄴㅇㅁㄴㅇㅁㄴㅇㅁㄴㅇㅁㄴㅇㅁㄴㅇ" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6o-qQ-j5r">
+                                        <rect key="frame" x="15" y="15" width="198.5" height="90"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="H9e-Lm-iy1"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                         <color key="textColor" name="greyishBrown"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" horizontalHuggingPriority="240" verticalHuggingPriority="251" horizontalCompressionResistancePriority="740" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="B2O-fP-Ihu">
-                                        <rect key="frame" x="0.0" y="93" width="213.5" height="170"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tempImage" translatesAutoresizingMaskIntoConstraints="NO" id="Pkr-Af-sZ3">
-                                                <rect key="frame" x="73.5" y="0.0" width="140" height="170"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="140" id="be8-jz-UkD"/>
-                                                    <constraint firstAttribute="height" constant="170" id="mdF-yK-Ocg"/>
-                                                </constraints>
-                                            </imageView>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Pkr-Af-sZ3" secondAttribute="trailing" id="DeK-pE-h7w"/>
-                                            <constraint firstAttribute="bottom" secondItem="Pkr-Af-sZ3" secondAttribute="bottom" id="GaL-H9-lIs"/>
-                                            <constraint firstItem="Pkr-Af-sZ3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="B2O-fP-Ihu" secondAttribute="leading" id="UQL-wo-1eR"/>
-                                            <constraint firstItem="Pkr-Af-sZ3" firstAttribute="top" secondItem="B2O-fP-Ihu" secondAttribute="top" id="h5P-tK-kcC"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
-                            </stackView>
+                                <color key="backgroundColor" name="veryLightPink"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="t6o-qQ-j5r" secondAttribute="bottom" constant="15" id="H0H-NK-PIm"/>
+                                    <constraint firstItem="t6o-qQ-j5r" firstAttribute="leading" secondItem="up0-D3-klp" secondAttribute="leading" constant="15" id="JDw-aL-rTk"/>
+                                    <constraint firstItem="t6o-qQ-j5r" firstAttribute="top" secondItem="up0-D3-klp" secondAttribute="top" constant="15" id="hEz-7o-3lk"/>
+                                    <constraint firstAttribute="trailing" secondItem="t6o-qQ-j5r" secondAttribute="trailing" constant="15" id="vdn-Rl-Lnm"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" name="veryLightPink"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="o7s-Vt-3Gf" secondAttribute="bottom" constant="15" id="4AY-Or-hN6"/>
-                            <constraint firstAttribute="trailing" secondItem="o7s-Vt-3Gf" secondAttribute="trailing" constant="15" id="OlN-Ao-R1L"/>
-                            <constraint firstItem="o7s-Vt-3Gf" firstAttribute="top" secondItem="up0-D3-klp" secondAttribute="top" constant="15" id="PNX-ue-SAh"/>
-                            <constraint firstItem="o7s-Vt-3Gf" firstAttribute="leading" secondItem="up0-D3-klp" secondAttribute="leading" constant="15" id="hsR-xG-9ec"/>
-                        </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
-                                <real key="value" value="15"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </view>
+                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afE-Eu-Tzm">
+                        <rect key="frame" x="168.5" y="88" width="21.5" height="12"/>
+                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
+                        <color key="textColor" name="brownGrey"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="peA-gL-2bJ" firstAttribute="bottom" secondItem="up0-D3-klp" secondAttribute="bottom" id="0m3-o9-bUX"/>
-                    <constraint firstItem="up0-D3-klp" firstAttribute="leading" secondItem="peA-gL-2bJ" secondAttribute="trailing" constant="10" id="Bxc-rf-yON"/>
-                    <constraint firstItem="peA-gL-2bJ" firstAttribute="top" secondItem="7Ih-AA-bRH" secondAttribute="bottom" constant="5" id="Y1w-gj-GzK"/>
-                    <constraint firstAttribute="trailing" secondItem="up0-D3-klp" secondAttribute="trailing" constant="20" id="YX9-dG-SLr"/>
-                    <constraint firstItem="7Ih-AA-bRH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="bcs-KT-xkU"/>
-                    <constraint firstAttribute="bottom" secondItem="up0-D3-klp" secondAttribute="bottom" constant="20" id="kwU-Yy-ubN"/>
-                    <constraint firstItem="up0-D3-klp" firstAttribute="leading" secondItem="7Ih-AA-bRH" secondAttribute="trailing" constant="10" id="noe-b4-pe4"/>
-                    <constraint firstItem="up0-D3-klp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="w1X-JJ-8i4"/>
+                    <constraint firstAttribute="bottom" secondItem="bBe-F8-S1e" secondAttribute="bottom" constant="20" id="4SQ-nZ-Rsy"/>
+                    <constraint firstItem="bBe-F8-S1e" firstAttribute="top" secondItem="Pkr-Af-sZ3" secondAttribute="bottom" constant="20" id="GLR-1j-NNs"/>
+                    <constraint firstItem="afE-Eu-Tzm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="MsS-cH-7ka"/>
+                    <constraint firstItem="Pkr-Af-sZ3" firstAttribute="leading" secondItem="afE-Eu-Tzm" secondAttribute="trailing" constant="10" id="SA5-dH-zlp"/>
+                    <constraint firstItem="Pkr-Af-sZ3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="a3k-MA-IJR"/>
+                    <constraint firstItem="afE-Eu-Tzm" firstAttribute="bottom" secondItem="Pkr-Af-sZ3" secondAttribute="bottom" id="crb-Xq-3si"/>
+                    <constraint firstAttribute="trailing" secondItem="Pkr-Af-sZ3" secondAttribute="trailing" constant="20" id="d4g-JE-Ugj"/>
+                    <constraint firstAttribute="trailing" secondItem="bBe-F8-S1e" secondAttribute="trailing" constant="20" id="deT-OZ-aT0"/>
+                    <constraint firstItem="peA-gL-2bJ" firstAttribute="bottom" secondItem="bBe-F8-S1e" secondAttribute="bottom" id="kGo-Fy-8Ru"/>
                     <constraint firstItem="peA-gL-2bJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="x1k-nQ-pRM"/>
+                    <constraint firstItem="bBe-F8-S1e" firstAttribute="leading" secondItem="peA-gL-2bJ" secondAttribute="trailing" constant="10" id="xTz-J1-SCq"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="chatImageView" destination="Pkr-Af-sZ3" id="Gf0-fX-ZjE"/>
-                <outlet property="imageContainerView" destination="B2O-fP-Ihu" id="Ef7-64-zuY"/>
+                <outlet property="imageHeightConstraint" destination="mdF-yK-Ocg" id="C6f-5e-0Hp"/>
+                <outlet property="imageMessageDivideHeightCnstraint" destination="GLR-1j-NNs" id="f8f-EH-7LH"/>
+                <outlet property="imageTimeLabel" destination="afE-Eu-Tzm" id="wDy-aa-mNM"/>
+                <outlet property="messageContinerView" destination="up0-D3-klp" id="WvM-Oz-E1f"/>
                 <outlet property="messageLabel" destination="t6o-qQ-j5r" id="8Jk-0v-08r"/>
                 <outlet property="timeLabel" destination="peA-gL-2bJ" id="jGm-FZ-bMl"/>
-                <outlet property="userCountLabel" destination="7Ih-AA-bRH" id="4Fy-HB-7ue"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="183.81696428571428"/>
+            <point key="canvasLocation" x="137.68115942028987" y="165.40178571428569"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="tempImage" width="276" height="183"/>
         <namedColor name="brownGrey">
             <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="greenishTeal">
-            <color red="0.17254901960784313" green="0.77647058823529413" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="greyishBrown">
             <color red="0.29019607843137257" green="0.29019607843137257" blue="0.29019607843137257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
